# python-project-lvl2

./: .coverage  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  pytest.yml
gendiff/: __init__.py  cli.py  engine.py  gendiff.py  generate_diff.py  generate_diff2.py  opening_files.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
generate_diff/scripts/: gendiff.py
tests/: __init__.py  test_diff.py  test_formatters.py  test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_yaml.py  test_get_diff.py  test_get_diff_json.py  test_get_diff_yaml.py  test_json.py  test_plain.py  test_stylish.py
tests/fixtures/: diff_file1_file2.json  diff_file1_file2.txt  expected_empty.json  expected_empty_file1.json  expected_file1_empty.json  expected_file1_file2.json  expected_file1_file2_json.json  expected_file1_file2_json.txt  expected_nested_files.json  expected_nested_files_json.json  expected_nested_files_json.txt
